2009-11-03  Martin Leidig  <mleidig@schlund.de>

	Added support for using ant-style patterns to specify overridden module
	resources in module descriptor.

	Example:
	<override-modules>
	  <module name="amodule">
	    <!-- all XML files from txt folder: -->
	    <resource path="txt/*.xml"/>
	    <!-- all XSL files from xsl folder or arbitrary subfolders: -->
	    <resource path="xsl/**/*.xsl"/>          
	  </module>
	</override-modules>

2009-10-09  Sebastian Marsching  <sebastian.marsching@1und1.de>

	Added option to editor code, to make include parts as
	editable or not editable.

2009-07-28  Martin Leidig  <mleidig@schlund.de>

	Throw RuntimeException if docroot resource is requested
	and no docroot ResourceProvider is registered (instead of
	running into a StackOverflow).

2009-07-27  Martin Leidig  <mleidig@schlund.de>

	Fixed possible deadlock within SessionEndNotificator when
	one thread adds a SessionListener after getting a lock to an
	application object, while another thread is invalidating
	the session and calls a registered SessionListener, which itself
	tries to lock the same application object.

2009-07-09  Martin Leidig  <mleidig@schlund.de>

	Re-added forgotten defaultflow config option for pagerequests.

2009-06-30  Martin Leidig  <mleidig@schlund.de>

	Return null instead of throwing a NPE when calling
	ContextResourceManager.getResource for unconfigured
	ContextResources.

2009-06-25  Martin Leidig  <mleidig@schlund.de>

        Fixed HTTP caching header problem: adding custom HTTP headers using
        SPDocument.addResponseHeader caused that the "Cache-Control" and
        "Expires" headers weren't set. Now these headers are always set if
        they were not overridden by the application.

2009-06-24  Martin Leidig  <mleidig@schlund.de>

        Added support for relative resolving of xincluded Pustefix
        property files.

2009-06-08  Martin Leidig  <mleidig@schlund.de>

	Optimized MD5 checksum creation for rendered HTML by using